crates/nest-rs-graphql/tests/integration/diagnostics/interceptors_on_resolver.stderr
error: `#[use_interceptors]` is not bridged on GraphQL yet — it would be a silent no-op on a resolver. Remove it, or move the layer onto an HTTP `#[controller]` / `#[routes]`, where interceptors and filters run. Guards work on both.
 --> tests/integration/diagnostics/interceptors_on_resolver.rs:8:1
  |
8 | #[use_interceptors(SomeInterceptor)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
